--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+mlua = { version = "0.10.2", features = ["lua51"] }
 rand = "0.8.5"
 regex = "1"
 serde = { version = "1.0", features = ["serde_derive"] }
